<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="less_then_1">&lt; 0.1</string>
    <string name="kb">KB</string>
    <string name="mb">MB</string>
    <string name="gb">GB</string>
    <string name="clock_pkg">com.android.deskclock</string>
    <string name="clock_component">com.android.deskclock.AlarmClock</string>
    <string name="pod_name">circles</string>
    <string name="shape_map">shape_map</string>
    <string name="widget_service_name">com.motorola.widget.circlewidget3d.CircleWidget3DProvider$CircleService</string>
    <string name="app_name">Circles</string>
    <string name="format_time">h:mm</string>
    <string name="time_colon">:</string>
    <string name="off">Off</string>
    <string name="unknown">Unknown</string>
    <string name="cancel">Cancel</string>
    <string name="weather_label_high">H</string>
    <string name="weather_label_low">L</string>
    <string name="add_city">Add cities</string>
    <string name="add_sign">+</string>
    <string name="weather_app_not_installed">Weather app not installed.</string>
    <string name="circles_settings">Circles settings</string>
    <string name="settings">Settings</string>
    <string name="notifications">NOTIFICATIONS</string>
    <string name="notifications_summary">Choose which notifications appear in the Circles widget.</string>
    <string name="show_text">Text message</string>
    <string name="show_missed_call">Missed call</string>
    <string name="show_voicemail">Voicemail</string>
    <string name="set_theme">Set Theme</string>
    <string name="show_mobile_data">Show mobile data use</string>
    <string name="show_mobile_data_summary">Display data usage in the small circle</string>
    <string name="show_guideme_circle">Show guide me</string>
    <string name="new_voicemail">New voicemail</string>
    <string name="multimedia_message">Multimedia message</string>
    <string name="dial">Dial</string>
    <string name="private_number">Private number</string>
    <string name="pay_phone">Pay phone</string>
    <string name="help_flip_circle">Swipe down for more</string>
    <string name="select_app">Select a circle</string>
    <string name="clock">Clock</string>
    <string name="weather">Weather</string>
    <string name="battery">Battery</string>
    <string name="data">Data</string>
    <string name="empty" />
    <string name="dummy_weather_temp">000c</string>
    <string name="dummy_weather_current_degree">°</string>
    <string name="dummy_weather_high_label">W</string>
    <string name="not_supported_widget">The Circles widget is not supported on 3rd party home screens.</string>
    <string name="battery_level_format">%1$d%%</string>
    <string name="set">Set</string>
</resources>
